--- a/layouts/partials/user-profile.html
+++ b/layouts/partials/user-profile.html
@@ -209,19 +209,15 @@ window.onscroll = function (e) {
   }
 };
 
-var style = localStorage.getItem('data-color-mode')
-githubIconElement = document.getElementById('github-icon')
-twitterIconElement = document.getElementById('twitter-icon')
-if (style == 'light') {
-  if (githubIconElement) githubIconElement.setAttribute('fill', '#24292e')
-  if (twitterIconElement) twitterIconElement.setAttribute('fill', 'black')
+// Force dark mode icon colors
+var githubIconElement = document.getElementById('github-icon');
+var twitterIconElement = document.getElementById('twitter-icon');
+if (githubIconElement) {
+  githubIconElement.removeAttribute('fill');
+  githubIconElement.setAttribute('class', 'octicon');
+  githubIconElement.setAttribute('color', '#f0f6fc');
 }
-else {
-  if (githubIconElement) {
-    githubIconElement.removeAttribute('fill')
-    githubIconElement.setAttribute('class', 'octicon')
-    githubIconElement.setAttribute('color', '#f0f6fc')
-  }
-  if (twitterIconElement)  twitterIconElement.setAttribute('fill', 'white') 
+if (twitterIconElement) {
+  twitterIconElement.setAttribute('fill', 'white');
 }
 </script>
